python-reahl (5.2.0) unstable; urgency=low

 * Add Chart widget for plotly (#281).

 -- Iwan Vosloo <iwan@reahl.org>  Thu, 17 June 2021 15:25:00 +0200

python-reahl (5.1.1) unstable; urgency=low

 * Removed duplicated migration.
 * Added missing dependency reahl-doc -> reahl-dev.

 -- Iwan Vosloo <iwan@reahl.org>  Thu, 17 June 2021 15:25:00 +0200

python-reahl (5.1.0) unstable; urgency=low

 * Extracted reahl/webdev/tools to reahl-browsertools (#315).
 * Updated deployment examples (#306).
 * Added howtos for using SASS and multihomed (#316).
 * Updated javascript dependencies (#321).
 * Fixed migration bug (#319).
 * Fixed seuptools issue on Windows (#271).
 * Specify reahl serve ports from config (#305).
 * Dropped support for Python 3.5.

 -- Iwan Vosloo <iwan@reahl.org>  Thu, 17 June 2021 14:25:00 +0200


python-reahl (5.0.1) unstable; urgency=low

 * Renamed the DynamicContent feature to Calculator
 * Built wheel filenames are no longer universal. Only for py3

 -- Iwan Vosloo <iwan@reahl.org>  Tue, 24 Nov 2020 08:45:00 +0200


python-reahl (5.0.0) unstable; urgency=low

 * Added the ability for onchange events to cause Widgets to be refreshed via ajax (responsive-disclosure #132).
 * Added the ability for refreshed Widgets to be able to recalculate their domain before rendering again.
 * Changed the reahl.web.interfaces protocols to support saving and clearing key/value pairs in View scope.
 * Changed reahl.web.bootstrap.files.FileUploadInput to inherit from reahl.web.ui.Input instead of PrimitiveInput.
 * Added a strict_checking kwarg for ReahlWSGIApplication.from_directory (issue #174).
 * Renamed RequiredConstraint.__init__'s selector_expression to dependency_expression.
 * Fixed Widget query_arguments mechanism to work correctly with list-like values.
 * Added fragment getter/setter on DriverBrowser.
 * Added UNDERSCORE.JS
 * Added current_url to Browser and deprecated older methods for compatibility with DriverBrowser. 