@@ -78,15 +78,28 @@ class UserSessionProtocol(object, metaclass=ABCMeta):
     @classmethod
     @abstractmethod
     def preserve_session(cls, session):
-        """Ensure the given session object is kept intact so that it can survive a transaction abort."""""
+        """
+        Ensure the given session object is kept intact so that it can survive a transaction abort.
+
+        .. versionadded:: 5.2.0
+        """
 
     @classmethod
     @abstractmethod
     def restore_session(cls, session):
-        """After a transaction is aborted, this ensures the given session is restored to its state before the abort."""
+        """
+        After a transaction is aborted, this ensures the given session is restored to its state before the abort.
 
+        .. versionadded:: 5.2.0
+        """
+
+    @abstractmethod
     def get_csrf_token(self):
-        """Fetch/create a suitable token for protecting against CSRF"""
+        """
+        Fetch/create a suitable token for protecting against CSRF.
+
+        .. versionadded:: 5.2
+        """
 
 
 class SessionDataProtocol(object, metaclass=ABCMeta):
