@@ -1,8 +1,10 @@
 python-reahl (5.2.0) unstable; urgency=low
 
  * Add Chart widget for plotly (#281).
+ * Implemented CSRF protection (#153).
 
  -- Iwan Vosloo <iwan@reahl.org>  Thu, 17 June 2021 15:25:00 +0200
+
 
 python-reahl (5.1.1) unstable; urgency=low
 
@@ -10,6 +12,7 @@ python-reahl (5.1.1) unstable; urgency=low
  * Added missing dependency reahl-doc -> reahl-dev.
 
  -- Iwan Vosloo <iwan@reahl.org>  Thu, 17 June 2021 15:25:00 +0200
+
 
 python-reahl (5.1.0) unstable; urgency=low
 
